--- a/index.css
+++ b/index.css
@@ -150,13 +150,60 @@ select{
     justify-content: space-around;
    
 }
-.intro button{
+button{
     border-radius: 8px;
     border:0px;
-    padding:16px 34px 16px 67px;
+/*    padding:16px 34px 16px 67px; */
     background-color: #FF5400;
     width:159px;
     height: 48px;
     margin-top:16px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 /*Information part start*/
+/*information section started*/
+.info{
+    width:1170px;
+    height: 540px;
+    margin:50px auto;
+    border-radius:0px;
+    display:flex;
+    justify-content:space-between;
+}
+.info .part1 {
+    width:577px;
+    height: 466px;
+}
+.infotitle{
+    width:555px;
+    height:50px;
+    color: #131318;
+    text-align: center;  
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+.info .part2{
+    width:540px;
+    height:540px;
+    background-image: url('Images/Rectangle\ 4.png');
+}
+.info ul{
+    margin-left:0px;
+}
+.info p{
+    margin-left: 0px;
+}
+.info p{
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px; 
+}
+/* Information section end */
