--- a/index.css
+++ b/index.css
@@ -89,6 +89,7 @@ header ul li {
     margin-top:48px;
     width:800px;
     height: 84px;
+    height:70px;
     display: flex;
     justify-content: space-around;
     background-color:rgba(255, 255, 255, 0.296);
@@ -100,7 +101,7 @@ header ul li {
     background-color:white;
     border-radius: 5px;
     align-items:center;
-    margin-top:16px;
+    margin-top:11px;
     text-align: center;
     display:flex;  
     justify-content:space-around;  
@@ -119,7 +120,7 @@ select{
     height: 48px;
     background-color:white;
     border-radius: 5px;
-    margin-top:16px;
+    margin-top:11px;
     text-align: center;
     display:flex;
     align-items: center;
@@ -131,7 +132,7 @@ select{
     height: 48px;
     background-color:white;
     border-radius: 5px;
-    margin-top:16px;
+    margin-top:11px;
     text-align: center;
     display:flex;
     align-items: center;
@@ -143,7 +144,7 @@ select{
     height: 48px;
     background-color:white;
     border-radius: 5px;
-    margin-top:16px;
+    margin-top:11px;
     text-align: center;
     display:flex;
     align-items: center;
@@ -207,3 +208,27 @@ button{
     line-height: 26px; 
 }
 /* Information section end */
+.exten{
+    width: 643px;
+    height: 126px;
+    margin:50px auto;
+    text-align:center;
+}
+.exten h3{
+    text-align:center;
+    width:555px;
+    height:50px;
+    color: #131318;
+    text-align: center;  
+    font-size: 40px;
+    font-weight: 800;
+    padding:0px 44px;
+    margin-bottom:24px;
+}
+.exten p{
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px; 
+}
+/*Extension part complete*/
