--- a/index.css
+++ b/index.css
@@ -422,3 +422,69 @@ button{
 .explore2 .explore12 {
     margin-left:266px;
 }
+/* Explore part end */
+footer{
+    width:1440px;
+    height:502px;
+    background: rgba(19, 19, 24, 0.05);
+    margin:0px auto;
+}
+.ftpr{
+    width:40px;
+    height: 1px;
+}
+.footer1{
+    margin-top: 100px;
+    width:232px;
+    height:55px;
+    margin-left:auto;
+    margin-right:auto;
+    background-image:url('Images/Group\ 40071\ \(2\).png');
+    background-repeat:no-repeat;
+    color: #FF5400;
+    font-size: 32px;
+    font-weight: 800;
+    padding-left:75px;
+
+}
+footer span{
+    color:rgb(19, 19, 24);
+}
+.footer2{
+    margin:16px;
+    width:759px;
+    height:52px;
+    position:relative;
+    padding:0px 339px;
+    color: #5A5A5D;
+    text-align: center; 
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px; 
+}
+.footer3{
+    width:175px;
+    height: 24px;
+    margin: 32px auto;
+    display:flex;
+    justify-content:space-around;
+}
+footer img{
+    width:24px; 
+    height:24px;
+}
+hr{
+    width: 872px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10); 
+}
+.footer4{
+    width:191px;
+    height:19px;
+    color: #131318;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 300;
+    margin:30px auto;
+
+}
