--- a/index.css
+++ b/index.css
@@ -813,7 +813,21 @@ line-height: normal;
             line-height: 24px;
           }
           /* exten part media end */
-          
+          /* extention 1 */
+          .exten{
+            width:335px;
+            height:auto;
+          }
+          .exten h3{
+            
+            width:240px;
+            height:25px;
+            color: #131318;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 800;
+            padding:0px 50px !important;
+          }
 
 
 }
